Fix padding on mobile menu

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -264,6 +264,7 @@ nav {
       
       .nav-link {
         width: 100%;
+        &:not(:last-of-type) { padding: 0 0 10px 0; }
 
         text-align: center; // For .btn
 
